<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="15dp"
    android:background="?attr/selectableItemBackground"
    android:clickable="true"
    android:foreground="?attr/selectableItemBackground"
    android:gravity="center_vertical"
    android:longClickable="true"
    android:orientation="horizontal"
    android:paddingBottom="5dp"
    android:paddingTop="5dp">

    <ImageView
        android:id="@+id/track_album_img"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="10dp"
        android:layout_weight="0"
        android:background="@android:color/transparent"
        app:srcCompat="@drawable/ic_library_music_black_24dp" android:contentDescription="TODO"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:baselineAligned="false"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            android:id="@+id/track_name_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/track_name"
            android:textColor="@color/colorAccentGreen"
            android:textSize="18sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/track_artists_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="@string/track_artists"
                android:textColor="@color/colorGrey" />

            <TextView
                android:id="@+id/track_duration_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingStart="5dp"
                android:singleLine="true"
                android:text="@string/track_duration"
                android:textColor="@color/colorGrey" />
        </LinearLayout>

    </LinearLayout>

    <ImageButton
        android:id="@+id/context_menu_btn"
        android:layout_width="40dp"
        android:layout_height="match_parent"
        android:layout_weight="0"
        android:background="@android:color/transparent"
        app:srcCompat="@drawable/ic_more_vert_black_24dp" android:contentDescription="TODO"/>

</LinearLayout>
