<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:layout_marginEnd="25dp"
    android:layout_marginStart="20dp"
    android:gravity="center_vertical|center_horizontal">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="81dp"
        tools:layout_editor_absoluteY="186dp"
        android:id="@+id/linearLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/track_requester_text"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0"
                android:gravity="center_vertical"
                android:text="Requested by "
                android:textColor="@color/colorGrey"
                android:textSize="10sp"
                android:textStyle="italic"
                app:layout_column="0"
                app:layout_row="2" />

            <TextView
                android:id="@+id/textView17"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/requestor_name"
                android:textColor="@color/colorGrey"
                android:textSize="10sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/ic_002_spotify" />

        </LinearLayout>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp">

            <ImageView
                android:id="@+id/track_album_img"
                android:layout_width="225dp"
                android:layout_height="225dp"
                android:layout_gravity="center_horizontal"
                android:background="@color/cardview_light_background"
                android:contentDescription="Album art "
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/ic_library_music_black_24dp" />
        </android.support.v7.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                app:layout_column="2"
                app:layout_columnSpan="1"
                app:layout_row="0"
                app:srcCompat="@drawable/ic_thumb_up_24dp" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/track_reputation_value"
                android:textAlignment="center"
                android:textColor="@color/colorGrey"
                android:textStyle="italic"
                app:layout_column="2"
                app:layout_columnSpan="2"
                app:layout_row="2" />

            <ImageButton
                android:id="@+id/imageButton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                app:layout_column="3"
                app:layout_row="0"
                app:srcCompat="@drawable/ic_thumb_down_24dp" />
        </LinearLayout>

        <TextView
            android:id="@+id/track_name_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/track_name"
            android:textAlignment="center"
            android:textColor="@color/colorAccentBlue"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_column="0"
            app:layout_row="0" />

        <TextView
            android:id="@+id/track_artists_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/track_artists"
            android:textAlignment="center"
            android:textColor="@color/colorGrey"
            app:layout_column="1"
            app:layout_row="1" />

        <TextView
            android:id="@+id/track_duration_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/linearLayout"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="26dp"
            android:layout_marginEnd="7dp"
            android:layout_weight="1"
            android:text="@string/track_duration"
            android:textAlignment="center"
            android:textColor="@color/colorGrey"
            app:layout_column="0"
            app:layout_row="1" />

    </LinearLayout>

</RelativeLayout>
